2016-06-10  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py: Use the logging module to warn when no
	directories are found.  Inherit InvalidDataError from ValueError.
		
2016-06-03  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py: Added capability to skip the first
	several lines of a granule, if they are contained in the previous one.
	Note that this is not always the correct method; sometimes the quality
	of either one is better.  Ideally, what granule to take a scanline
	from should be chosen on a case-by-case basis.

2016-05-23  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py:

	Added class to provide a simple time profiling utility.

2016-05-20  Gerrit Holl  <g.holl@reading.ac.uk>:

	* typhon/utils/cache.py: Bugfix

	- Now I realise why functools.lru_cache refuses to cache mutable
	results... duh!  The mutable result gets altered earlier or later, so
	it's not an actual cache of the object.  As a workaround (I still want
	to cache it!) I'm caching a copy.

	* typhon/datasets/dataset.py: Bugfix

	- Something was going disastrously wrong in find_granules_sorted.  It
	doesn't seem to go nearly as disastrously wrong now.  It might even be
	miraculously correct.

2016-05-20  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Changed default mathtext font.

2016-05-17  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-05-17  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.3.0 Release.

	* setup.py: Change dev status to '4 - Beta'.

2016-05-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init.py__:

	Added function extract_block_diag() to extract blocks around the
	diagonal of a square matrix.

2016-05-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	Added keyword argument 'comment' to save() function. A string passed as